infra/cluster-gandi/ingress.yaml
# Ingress creation => Route HTTPS vers escape.eisi-dune.eu
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escape-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: workshop-whitelist@kubernetescrd
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer-group: cert-manager.io
spec:
  ingressClassName: traefik # Nouvelle méthode officielle
  rules:
    - host: escape.eisi-dune.eu
      http:
        paths:
          - path: /
            pathType: Prefix # ImplementationSpecific
            backend:
              service:
                name: escape-service
                port:
                  number: 80
  tls:
    - hosts:
        - escape.eisi-dune.eu
      secretName: escape-tls
